[package]
name = "secapi-sys"
version.workspace = true
description = "FFI bindings to SecAPI"
keywords = ["secure", "storage", "secapi"]
categories = ["cryptography", "external-ffi-bindings"]
repository = "https://github.com/rdkcentral/secapi-rust"
license.workspace = true
readme.workspace = true
edition.workspace = true
build = "build.rs"
links = "saclient"

[features]
default = []
system-sa-client = []

[build-dependencies]
bindgen = "0.72.0"
