[package]
name = "secapi"
version.workspace = true
authors = [
    "Stefan Bossbaly <Stefan_Bossbaly@comcast.com>",
]
description = "SecAPI bindings"
keywords = ["crypto", "secure", "secapi"]
categories = ["cryptography", "api-bindings"]
repository = "https://github.com/rdkcentral/secapi-rust"
readme = "README.md"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
system-sa-client = ["secapi-sys/system-sa-client"]

[dependencies]
libc = "0.2.147"
secapi-sys = { path = "../secapi-sys", version = "0.2.0" }
chrono = "0.4.30"
bitflags = "2.4.0"
uuid = "1.4.1"
