[package]
name = "secapi"
version.workspace = true
authors = [
    "Stefan Bossbaly <Stefan_Bossbaly@comcast.com>",
]
description = "SecAPI bindings"
keywords = ["crypto", "secure", "secapi"]
categories = ["cryptography", "api-bindings"]
repository = "https://github.com/rdkcentral/secapi-rust"
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
system-sa-client = ["secapi-sys/system-sa-client"]
bindgen = ["secapi-sys/bindgen"]

[dependencies]
secapi-sys = { path = "../secapi-sys", version = "0.2.0" }
chrono = "0.4.30"
bitflags = "2.4.0"
uuid = "1.4.1"
